# edgeai-hw6

./: .gitattributes  .gitignore  Dockerfile.ci  HW6_分析.md  README.md  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
calibration/: README.md  accuracy_baseline.json  calibrate_int8.py  calibration.yaml
deploy/: deploy.sh  docker-compose.yml  healthcheck.sh  power_profile.json  rollback.sh
evidence/: rollback-demo.cast
src/: __init__.py  healthcheck.py  inference_node.py  mqtt_publisher.py  solution.py  untested_module.py  unused_module.py
tests/: test_accuracy.py  test_healthcheck.py  test_inference.py  test_mqtt.py  test_smoke.py  test_solution.py
tests/integration/: test_jetson_e2e.py
